<resources>
    <string name="app_name">Budget Manager</string>
    <string name="title_activity_navigation_drawer">Budget Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="manage_your_credit_and_debit_cards">manage your credit and debit cards</string>
    <string name="banking_app">Banking App</string>
    <string name="cards">Cards</string>
    <string name="add_card">Add card</string>
    <string name="card_details">Card details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_new_card_to_your_wallet">Add a new card to your wallet</string>
    <string name="card_number">Card number</string>
    <string name="visa">VISA</string>
    <string name="visa_electron">VISA Electron</string>
    <string name="mastercard">Mastercard</string>
    <string name="maestro">Maestro</string>
    <string name="your_card">Your card</string>
    <string name="exp_date_invalid">The expiration date is not valid!</string>
    <string name="card_number_invalid">Card number is not valid!</string>
    <string name="card_holder_invalid">Card holder name invalid!</string>
    <string name="add_transaction">Add transaction</string>
    <string name="transaction_date">Transaction date</string>
    <string name="transaction_name">Transaction name</string>
    <string name="transaction_value">Transaction value</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="add">Add</string>
    <string name="value_invalid">Transaction value is not valid!</string>
    <string name="transactions">Transactions</string>
    <string name="add_transaction_menu">Add transaction</string>
    <string name="report">Report</string>
    <string name="your_current_balance">Your current balance</string>
    <string name="currency">LEI</string>
    <string name="update_label">Update</string>
    <string name="expense_label">Expense</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">Log in</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">name</string>
    <string name="register_title">Register</string>
    <string name="category_name">category name</string>
    <string name="add_a_new_category">Add a new category</string>
    <string name="categories">Categories</string>
    <string name="delete">delete</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="cancel">CANCEL</string>
    <string name="date">Date</string>
    <string name="balance">balance</string>
    <string name="percentage">percentage</string>
    <string name="logs">Logs</string>
    <string name="save">Save</string>
    <string name="expense_and_income_by_category">Expense and Income by Category</string>
    <string name="pie_charts">Pie charts</string>
    <string name="transactions_from_json">Transactions from JSON</string>
    <string name="valid_name">Please type a valid name!</string>
    <string name="invadid_value">Please type a valid value!</string>
</resources>