<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_transactions"
            android:iconTint="@color/indigo_dye"
            android:title="@string/transactions" />
        <item
            android:id="@+id/nav_add_transaction"
            android:icon="@drawable/ic_baseline_add_circle_24"
            android:title="@string/add_transaction"/>
        <item
            android:id="@+id/nav_transactions_report"
            android:icon="@drawable/ic_report"
            android:title="@string/report" />
        <item
            android:id="@+id/pieCharts"
            android:icon="@drawable/ic_baseline_pie_chart_24"
            android:title="@string/pie_charts" />

        <item
            android:id="@+id/nav_category_list"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/categories" />
    </group>
</menu>