<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <TextView
        android:id="@+id/logDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/date">

    </TextView>
    <TextView
        android:id="@+id/balanceLogTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/balance">

    </TextView>

    <TextView
        android:id="@+id/expenseLogTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/expense">

    </TextView>

    <TextView
        android:id="@+id/incomeLogTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/income">

    </TextView>

    <TextView
        android:id="@+id/spendingPercLogTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/percentage">

    </TextView>

</LinearLayout>