<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TransactionAddForm"
    android:padding="20dp">
    <TextView
        android:id="@+id/addTransactionFormTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_transaction"
        android:textSize="24sp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp">

    </TextView>

    <EditText
        android:id="@+id/transactionNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/transaction_name"
        android:layout_marginBottom="10dp">

    </EditText>

    <EditText
        android:id="@+id/transactionValueInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/transaction_value"
        android:layout_marginBottom="10dp">

    </EditText>

    <EditText
        android:id="@+id/transactionDateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="date"
        android:hint="@string/transaction_date"/>

    <RadioGroup
        android:id="@+id/transactionTypeOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:weightSum="2"
        >
        <RadioButton
            android:id="@+id/expenseOption"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            android:layout_weight="1">

        </RadioButton>

        <RadioButton
            android:id="@+id/incomeOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income">

        </RadioButton>

    </RadioGroup>

    <Spinner
        android:id="@+id/transactionCategorySpinner"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </Spinner>

    <Button
        android:id="@+id/addCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/outrageous_orange"
        android:layout_gravity="center"
        android:text="@string/add_a_new_category">

    </Button>


    <Button
        android:id="@+id/addTransactionButton"
        style="@style/buttonMyStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add">

    </Button>


</LinearLayout>